--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@polymer/iron-demo-helpers": "^3.0.2",
     "@polymer/iron-icon": "^3.0.1",
     "@polymer/iron-icons": "^3.0.1",
-    "@polymer/lit-element": "^0.6.5",
-    "@webcomponents/webcomponentsjs": "^2.2.1"
+    "@webcomponents/webcomponentsjs": "^2.2.1",
+    "lit-element": "^2.0.0-rc.3"
   },
   "devDependencies": {
     "polymer-cli": "^1.9.2"
