--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@polymer/iron-icon": "^3.0.1",
     "@polymer/iron-icons": "^3.0.1",
     "@webcomponents/webcomponentsjs": "^2.2.1",
-    "lit-element": "^2.0.0-rc.3"
+    "lit-element": "^2.0.1"
   },
   "devDependencies": {
     "polymer-cli": "^1.9.2"
